alignment issue fixed in search

--- a/health_tracker/static/health_tracker/scss/search.scss
+++ b/health_tracker/static/health_tracker/scss/search.scss
@@ -19,6 +19,13 @@ body{
     margin-bottom: 4rem;
 }
 
+.empty{
+    text-align: center;
+    font-family: 'IBM Plex Sans';
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+}
+
 #files_container{
     display: grid;
     grid-template-columns: repeat(auto-fit, 300px);
